<resources>
    <string name="app_name">DotaHeroes</string>
    <string name="heroes_name">Heroes Name</string>
    <string name="power">Power</string>
    <string name="role">Role</string>
    <string name="desc">Desc</string>
    <string name="bio">BIO :</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="card_view">Card View</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
</resources>
